# resident-evil-requiem-headtracking

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  HeadTracking.ini  README.md  THIRD-PARTY-NOTICES.md  manifest.json  pixi.toml
.github/workflows/: build.yml  release.yml
scripts/: deploy.ps1  detect-game.ps1  install.cmd  package-release.ps1  refresh-vendors.ps1  release.ps1  uninstall.cmd
src/: pch.h  plugin_main.cpp
src/camera/: camera_hook.cpp  camera_hook.h  camera_internal.h  game_state_detector.cpp  game_state_detector.h  gui_compensation.cpp  gui_compensation.h  gui_diagnostics.cpp  gui_diagnostics.h  math_types.h
src/core/: config.cpp  config.h  constants.h  logger.cpp  logger.h  mod.cpp  mod.h
